--- a/package.json
+++ b/package.json
@@ -27,18 +27,19 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
-    "@angular/cdk": "^7.1.1",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
-    "@angular/elements": "^7.2.4",
-    "@angular/forms": "~7.1.0",
-    "@angular/material": "^7.1.1",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
-    "@lcu-ide/common": "0.0.5",
+    "@angular/animations": "~8.1.2",
+    "@angular/cdk": "^8.1.1",
+    "@angular/common": "~8.1.2",
+    "@angular/compiler": "~8.1.2",
+    "@angular/core": "~8.1.2",
+    "@angular/elements": "^8.1.2",
+    "@angular/forms": "^8.1.2",
+    "@angular/material": "^8.1.1",
+    "@angular/platform-browser": "~8.1.2",
+    "@angular/platform-browser-dynamic": "~8.1.2",
+    "@angular/router": "~8.1.2",
+    "@aspnet/signalr": "^1.1.4",
+    "@lcu-ide/common": "^0.19.2",
     "@lowcodeunit-devkit/ng-lcu": "0.0.167",
     "@webcomponents/custom-elements": "^1.2.1",
     "@webcomponents/webcomponentsjs": "^2.2.7",
@@ -51,16 +52,16 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular-devkit/build-ng-packagr": "~0.11.0",
-    "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "~7.1.0",
-    "@angular/language-service": "~7.1.0",
-    "@lcu/cli": "0.0.86",
+    "@angular-devkit/build-angular": "^0.801.2",
+    "@angular-devkit/build-ng-packagr": "^0.801.2",
+    "@angular/cli": "^8.1.2",
+    "@angular/compiler-cli": "~8.1.2",
+    "@angular/language-service": "~8.1.2",
+    "@lcu/cli": "^0.2.28",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.1.0",
     "concat-glob-cli": "^0.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -70,12 +71,12 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "mkdirp": "^0.5.1",
-    "ng-packagr": "^4.2.0",
+    "ng-packagr": "^5.3.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "^3.4.5"
   }
 }
