--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.3",
   "scripts": {
     "build:common": "ng build common",
+    "build:demo": "ng build demo --prod",
     "build:lcu": "ng build lcu --prod --single-bundle && npm run pack",
     "demo": "npm run build:common && ng serve demo",
     "demo:wc": "npm run build:common && npm run build:lcu && ng serve demo",
