--- a/package.json
+++ b/package.json
@@ -28,17 +28,18 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "~8.1.2",
-    "@angular/cdk": "^8.1.1",
-    "@angular/common": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/core": "~8.1.2",
-    "@angular/elements": "^8.1.2",
-    "@angular/forms": "^8.1.2",
-    "@angular/material": "^8.1.1",
-    "@angular/platform-browser": "~8.1.2",
-    "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
+    "@angular/animations": "~8.1.3",
+    "@angular/cdk": "^8.1.2",
+    "@angular/common": "~8.1.3",
+    "@angular/compiler": "~8.1.3",
+    "@angular/core": "~8.1.3",
+    "@angular/elements": "^8.2.2",
+    "@angular/flex-layout": "^8.0.0-beta.26",
+    "@angular/forms": "~8.1.3",
+    "@angular/material": "^8.1.2",
+    "@angular/platform-browser": "~8.1.3",
+    "@angular/platform-browser-dynamic": "~8.1.3",
+    "@angular/router": "~8.1.3",
     "@aspnet/signalr": "^1.1.4",
     "@lcu-ide/common": "^0.19.2",
     "@lowcodeunit-devkit/ng-lcu": "0.0.167",
@@ -47,18 +48,18 @@
     "copy": "^0.3.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "ngx-build-plus": "^8.1.1",
-    "rxjs": "~6.3.3",
+    "ngx-build-plus": "^8.1.3",
+    "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.801.2",
-    "@angular-devkit/build-ng-packagr": "^0.801.2",
-    "@angular/cli": "^8.1.2",
-    "@angular/compiler-cli": "~8.1.2",
-    "@angular/language-service": "~8.1.2",
-    "@lcu/cli": "^0.2.28",
+    "@angular-devkit/build-angular": "~0.801.3",
+    "@angular-devkit/build-ng-packagr": "~0.801.3",
+    "@angular/cli": "~8.1.3",
+    "@angular/compiler-cli": "~8.1.3",
+    "@angular/language-service": "~8.1.3",
+    "@lcu/cli": "^0.20.70",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -72,12 +73,12 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "mkdirp": "^0.5.1",
-    "ng-packagr": "^5.3.0",
+    "ng-packagr": "^5.1.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.29.0",
+    "tsickle": "^0.35.0",
     "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "^3.4.5"
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3"
   }
 }
