--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "core-js": "^2.5.4",
     "ngx-build-plus": "^9.0.6",
     "rxjs": "~6.5.4",
+    "terser": "^4.3.9",
     "tslib": "^1.9.0",
     "zone.js": "~0.10.2"
   },
