--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@angular/platform-browser-dynamic": "^10.1.0",
     "@angular/router": "^10.1.0",
     "@aspnet/signalr": "^1.1.4",
-    "@lcu/common": "^1.58.478",
+    "@lcu/common": "^1.60.502-9063-password-pipe",
     "@lowcodeunit-devkit/ng-lcu": "^1.24.148",
     "@lowcodeunit/lazy-element": "^1.3.4",
     "@lowcodeunit/lcu-guided-tour-common": "^1.20.189",
