AB#8783 update lcu/common version

--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "@angular/platform-browser-dynamic": "^10.1.0",
     "@angular/router": "^10.1.0",
     "@aspnet/signalr": "^1.1.4",
-    "@lcu/common": "^1.60.502-9063-password-pipe",
+    "@lcu/common": "^1.61.519",
     "@lowcodeunit-devkit/ng-lcu": "^1.24.148",
     "@lowcodeunit/lazy-element": "^1.3.4",
-    "@lowcodeunit/lcu-guided-tour-common": "^1.20.189",
+    "@lowcodeunit/lcu-guided-tour-common": "^1.22.204",
     "@webcomponents/custom-elements": "^1.4.3",
     "@webcomponents/webcomponentsjs": "^2.5.0",
     "copy": "^0.3.2",
