--- a/projects/lcu/package.json
+++ b/projects/lcu/package.json
@@ -1,4 +1,8 @@
 {
 	"name": "@lowcodeunit/data-grid-lcu",
-	"version": "0.0.3"
+	"version": "0.0.3",
+	"peerDependencies": {
+		"@angular/common": "^10.0.8",
+		"@angular/core": "^10.0.8"
+	}
 }
