--- a/angular.json
+++ b/angular.json
@@ -10,12 +10,12 @@
       "prefix": "lcu",
       "schematics": {
         "@schematics/angular:component": {
-          "styleext": "scss"
+          "style": "scss"
         }
       },
       "architect": {
         "build": {
-          "builder": "ngx-build-plus:build",
+          "builder": "ngx-build-plus:browser",
           "options": {
             "outputPath": "dist/lcu",
             "index": "projects/lcu/src/index.html",
@@ -183,7 +183,7 @@
       "prefix": "lcu",
       "schematics": {
         "@schematics/angular:component": {
-          "styleext": "scss"
+          "style": "scss"
         }
       },
       "architect": {
