--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,18 +7,18 @@
 		"declaration": false,
 		"downlevelIteration": true,
 		"experimentalDecorators": true,
-		"module": "esnext",
 		"moduleResolution": "node",
 		"importHelpers": true,
-		"target": "es2015",
 		"noImplicitAny": true,
 		"suppressImplicitAnyIndexErrors": true,
 		"typeRoots": [
 			"node_modules/@types"
 		],
+		"target": "es2017",
+		"module": "esnext",
 		"lib": [
-			"es2018",
-			"dom"
+		"es2020",
+		"dom"
 		],
 		"paths": {
 			"@lowcodeunit/data-grid": [
@@ -30,8 +30,9 @@
 		}
 	},
 	"angularCompilerOptions": {
-		"enableIvy": false,
-		"fullTemplateTypeCheck": true,
-		"strictInjectionParameters": true
+		"enableI18nLegacyMessageIdFormat": false,
+		"strictInjectionParameters": true,
+		"strictInputAccessModifiers": true,
+		"strictTemplates": true
 	}
 }
