--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lowcodeunit/data-grid",
   "version": "0.0.3",
   "scripts": {
-    "build:common": "ng build common --prod",
+    "build:common": "ng build common --configuration production",
     "build:demo": "ng build demo --prod",
     "build:lcu": "ng build lcu --prod --single-bundle && npm run pack",
     "demo": "npm run build:common && ng serve demo",
