--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.3",
   "scripts": {
     "build:common": "ng build common --configuration production",
-    "build:demo": "ng build demo --prod",
-    "build:lcu": "ng build lcu --prod --single-bundle && npm run pack",
+    "build:demo": "ng build demo --configuration production",
+    "build:lcu": "ng build lcu --configuration production --single-bundle && npm run pack",
     "demo": "npm run build:common && ng serve demo",
     "demo:wc": "npm run build:common && npm run build:lcu && ng serve demo",
     "deploy": "npm version patch && npm run deploy:all",
